@@ -270,6 +270,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #16935: unittest now counts the module as skipped if it raises SkipTest,
+  instead of counting it as an error.  Patch by Zachary Ware.
+
 - Issue #17018: Make Process.join() retry if os.waitpid() fails with EINTR.
 
 - Issue #17197: profile/cProfile modules refactored so that code of run() and
